--- a/yes.html
+++ b/yes.html
@@ -16,10 +16,10 @@
         <h1 class="yes-title">Knew you would say yes! 🎉</h1>
 
         <div class="gif-container">
-            <img id="cat-gif" src="https://media.tenor.com/eNHbizSfVb0AAAAj/lovemode-cute.gif" alt="celebrating">
+            <img id="cat-gif" src="https://tenor.com/fSqu9RPTwMk.gif" alt="celebrating">
         </div>
 
-        <p class="yes-message">You just made me the happiest person! 💕</p>
+        <p class="yes-message"> On my way to come pick you up! lol  </p>
     </div>
 
     <audio id="bg-music" loop>
